samples/_failures_safe/1761177878_37c3c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f96a12c.c: In function ‘main’:
./samples/SAFE/__tmp_6f96a12c.c:149:5: error: expected expression at end of input
  149 |     if (len > 0 && input_text[len -
      |     ^~
./samples/SAFE/__tmp_6f96a12c.c:149:5: error: expected declaration or statement at end of input
